--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=db.jlwcfevbewaryulsslre.supabase.co;Port=6543;Database=postgres;Username=postgres;Password=",
+    "DefaultConnection": "Host=127.0.0.1;Port=5432;Database=postgres;Username=root;Password=root",
     "UsersContext": "Users database"
   },
   "Logging": {
