Подключил адекватно БД, пытаюсь вывкести данные из БД

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,13 +1,12 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=127.0.0.1;Port=5432;Database=postgres;Username=root;Password=root",
-    "UsersContext": "Users database"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=root;Password=root;Host=postgresserver;Port=5432;Database=db;Pooling=true;"
+  }
 }
